# aldjemy

./: .gitignore  CONTRIBUTING.rst  Changelog  HISTORY.rst  LICENSE  README.rst  circle.yml  connection_record.py  core.py  models.py  orm.py  pyproject.toml  setup.py  table.py  test.sh  tox.ini
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: _bootstrap-poetry.yml  black.yml  build.yml  isort.yml  lint.yml  publish.yml
aldjemy/: __init__.py  apps.py  core.py  engine.py  geoalchemy2.py  meta.py  orm.py  postgres.py  session.py  sqlite.py  table.py  types.py  wrapper.py
aldjemy/postgresql/backend/: base.py
aldjemy_test/: pg_test.py  sample_test.py  settings.py
aldjemy_test/pg/: apps.py
test_project/: aldjemy  frozen.txt  manage.py  requirements.txt  settings.py  test.py  urls.py
test_project/a_sample/: models.py
test_project/aldjemy/: __init__.py  core.py  models.py  postgres.py  sqlite.py  table.py
test_project/pg/: apps.py  models.py  routers.py  tests.py
test_project/pg/migrations/: 0001_initial.py  0002_auto_20170705_1331.py  0003_jsonmodel.py  0004_daterangemodel.py  0005_decimalarraymodel.py
test_project/sample/: models.py  routers.py  tests.py
test_project_geo/: frozen.txt  settings.py
test_project_geo/sample/: .models.py.swp  models.py  tests.py
test_project_postgres/: manage.py  settings.py
test_project_postgres/pg/: apps.py  tests.py
test_project_postgres/sample/: apps.py  models.py  tests.py
test_project_postgres/sample/migrations/: 0001_initial.py  0002_auto_20170705_1331.py  0003_jsonmodel.py  0004_daterangemodel.py
test_project_postgres/test_project_postgres/: settings.py  urls.py  wsgi.py
