[project]
name = "aldjemy"
version = "2.7"
description = "SQLAlchemy for your Django models"
authors = [{ name = "Mikhail Krivushin" }]
license = "BSD-3-Clause"
readme = "README.rst"
urls.homepage = "https://github.com/aldjemy/aldjemy"
urls.repository = "https://github.com/aldjemy/aldjemy"

requires-python = ">=3.9"
dependencies = [
  "SQLAlchemy>=1.4,<2",
  "Django>=4.2",
  "psycopg2-binary>=2.9.10",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "pytest-django",
  "psycopg2-binary",
  "black",
  "isort",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"
src_paths = ["aldjemy", "test_project"]
known_first_party = ["aldjemy", "test_project"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
]

[dependency-groups]
dev = [
    "isort>=5.13.2",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "pytest-django>=4.9.0",
    "ruff>=0.7.2",
    "tox-uv>=1.16.0",
]
