[project]
name = "aldjemy"
version = "3.0"
description = "SQLAlchemy for your Django models"
authors = [{ name = "Mikhail Krivushin" }]
license = "BSD-3-Clause"
readme = "README.rst"
requires-python = ">=3.9"
dependencies = [
  "SQLAlchemy>=1.4,<2",
  "Django>=4.2",
]

[project.urls]
homepage = "https://github.com/aldjemy/aldjemy"
repository = "https://github.com/aldjemy/aldjemy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"
src_paths = ["aldjemy", "test_project"]
known_first_party = ["aldjemy", "test_project"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
]

[dependency-groups]
dev = [
  "pytest",
  "pytest-cov",
  "pytest-django",
  "psycopg2-binary",
  "isort",
  "ruff",
]
