[project]
name = "aldjemy"
version = "3.3"
description = "SQLAlchemy for your Django models"
authors = [{ name = "Mikhail Krivushin" }]
license = "BSD-3-Clause"
readme = "README.rst"
requires-python = ">=3.8"
dependencies = [
  "SQLAlchemy>=1.4",
  "Django>=4.1 ; python_version >= '3.8'",
  "Django>=4.2 ; python_version >= '3.9'",
  "Django>=5.0 ; python_version >= '3.10'",
]

[project.urls]
homepage = "https://github.com/aldjemy/aldjemy"
repository = "https://github.com/aldjemy/aldjemy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"
src_paths = ["aldjemy", "aldjemy_test"]
known_first_party = ["aldjemy", "aldjemy_test"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[dependency-groups]
dev = [
  "pytest",
  "pytest-cov",
  "pytest-django",
  "psycopg2-binary",
  "isort",
  "ruff",
  "pipdeptree>=2.23.4",
]
